# business-card-info-reader

./: .env.example  .gitignore  README.md  pyproject.toml
business_card_info_reader/: api.py  main.py  models.py  prompts.py
